tests/sources/invalid/classes/unknown_instance_method.fire
// Calling an unknown method on a class instance (not deferred -- this file
// has no imports, so defer_undefined_identifiers is off and the error is
// reported immediately).
class Foo {
    v: int32;

    fn Foo(v: int32) {
        this.v = v;
    }
}

fn main() -> int32 {
    f: Foo = Foo(1);
    x: int32 = f.bogus();  //~ ERROR FS-SEM-0010 @16
    return 0;
}
